--- a/day02/表格+列表.md
+++ b/day02/表格+列表.md
@@ -2,6 +2,10 @@
   - [表格属性](#表格属性)
   - [表格结构标签](#表格结构标签)
   - [合并单元格](#合并单元格)
+- [列表标签](#列表标签)
+  - [**无序列表**](#无序列表)
+  - [有序列表](#有序列表)
+  - [**自定义列表**](#自定义列表)
 ## 表格标签
 ```html
 <table>
@@ -54,4 +58,66 @@
     
     跨列：最左侧单元格为目标单元格，写合并代码
 
+3. 合并单元格步骤
+   1. 先确定是跨行合并还是跨列合并
+   2. 找到目标单元格，并写上合并方式 = 合并单元格数量。比如：`<td colspan = "2"></td>`
+   3. 删除多余的单元格
 
+![](../.github/表格回顾.png)
+
+## 列表标签
+
+### **无序列表**
+
+```html
+<ul>
+    <li>列表项1</li>
+    <li>列表项2</li>
+    <li>列表项3</li>
+</ul>
+```
+**NOTE:**
+
+**`<ul>`里面只能放`<li>`标签**
+
+**`<li>`里面可以放任意标签**
+
+### 有序列表
+
+```html
+<ol>
+    <li>列表项1</li>
+    <li>列表项2</li>
+    <li>列表项3</li>
+    <li>列表项4</li>
+</ol>
+```
+
+**NOTE:**
+
+**`<ol>`里面只能放`<li>`标签**
+
+**`<li>`里面可以放任意标签**
+
+### **自定义列表**
+
+> 自定义列表使用场景：
+> 
+> 自定义列表常用于对术语或专业名词进行解释和描述，定义列表的列表项前没有任何项目符号
+
+![](../.github/自定义列表使用场景.png)
+
+```html
+<dl>
+    <dt>名词1</dt>
+    <dd>名词1 解释1</dd>
+    <dd>名词1 解释2</dd>
+</dl>
+```
+
+**NOTE**
+
+1. `<dl>``</dl>`里面只能包含`<dt>`和`<dd>`
+2. `<dt>`和`<dd>`个数没有限制，通常是一个`<dt>`对应多个`<dd>`
+
+![](../.github/列表总结.png)
