--- a/day02/表格+列表.md
+++ b/day02/表格+列表.md
@@ -6,6 +6,8 @@
   - [**无序列表**](#无序列表)
   - [有序列表](#有序列表)
   - [**自定义列表**](#自定义列表)
+- [表单域](#表单域)
+  - [input标签单选框](#input标签单选框)
 ## 表格标签
 ```html
 <table>
@@ -121,3 +123,15 @@
 2. `<dt>`和`<dd>`个数没有限制，通常是一个`<dt>`对应多个`<dd>`
 
 ![](../.github/列表总结.png)
+
+
+## 表单域
+
+```html
+<form>
+    用户名：<input type="text"> <br>
+    密码：<input type="password">
+</form>
+```
+### input标签单选框
+
